// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkLoadingButton should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary"
    data-backpack-ds-component="LoadingButton"
    type="button"
  >
    <div
      class="bpk-loading-button__container"
    >
      <div
        class="bpk-loading-button--visible"
      >
        My button 
        <span
          style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
        >
          <svg
            aria-hidden="true"
            class="bpk-icon--rtl-support"
            height="1.5rem"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
            />
          </svg>
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "disabled" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--primary"
    data-backpack-ds-component="LoadingButton"
    disabled=""
    type="button"
  >
    <div
      class="bpk-loading-button__container"
    >
      <div
        class="bpk-loading-button--visible"
      >
        My button 
        <span
          style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
        >
          <svg
            aria-hidden="true"
            class="bpk-icon--rtl-support"
            height="1.5rem"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
            />
          </svg>
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--primary"
    data-backpack-ds-component="LoadingButton"
    disabled=""
    type="button"
  >
    <div
      class="bpk-loading-button__container"
    >
      <div
        class="bpk-loading-button--visible"
      >
        My button 
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            aria-hidden="true"
            class="bpk-icon--rtl-support"
            height="1rem"
            viewBox="0 0 24 24"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
            />
          </svg>
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "icon" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--primary"
    data-backpack-ds-component="LoadingButton"
    type="button"
  >
    <div
      class="bpk-loading-button__container"
    >
      <div
        class="bpk-loading-button--visible"
      >
        My button 
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            aria-hidden="true"
            height="1rem"
            viewBox="0 0 24 24"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1.5c-2.703 0-4.688 1.426-5.543 2.46C6.111 4.38 6 4.895 6 5.32v1.43a.75.75 0 0 1-.75.75H4.5a3 3 0 0 0-3 3v9a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3v-9a3 3 0 0 0-3-3h-.75a.75.75 0 0 1-.75-.75V5.385c0-.514-.162-1.074-.555-1.5C16.547 2.914 14.693 1.5 12 1.5m2.625 6h-5.25C9.168 7.5 9 7.276 9 7v-.583c0-.264.075-.52.23-.684C9.751 5.176 10.721 4.5 12 4.5c1.276 0 2.208.676 2.758 1.262.16.171.242.436.242.71V7c0 .276-.168.5-.375.5"
            />
          </svg>
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "iconDisabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--primary"
    data-backpack-ds-component="LoadingButton"
    disabled=""
    type="button"
  >
    <div
      class="bpk-loading-button__container"
    >
      <div
        class="bpk-loading-button--visible"
      >
        My button 
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            aria-hidden="true"
            height="1rem"
            viewBox="0 0 24 24"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1.5c-2.703 0-4.688 1.426-5.543 2.46C6.111 4.38 6 4.895 6 5.32v1.43a.75.75 0 0 1-.75.75H4.5a3 3 0 0 0-3 3v9a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3v-9a3 3 0 0 0-3-3h-.75a.75.75 0 0 1-.75-.75V5.385c0-.514-.162-1.074-.555-1.5C16.547 2.914 14.693 1.5 12 1.5m2.625 6h-5.25C9.168 7.5 9 7.276 9 7v-.583c0-.264.075-.52.23-.684C9.751 5.176 10.721 4.5 12 4.5c1.276 0 2.208.676 2.758 1.262.16.171.242.436.242.71V7c0 .276-.168.5-.375.5"
            />
          </svg>
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "iconPosition=leading" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--featured"
    data-backpack-ds-component="LoadingButton"
    type="button"
  >
    <div
      class="bpk-loading-button__container"
    >
      <div
        class="bpk-loading-button--visible"
      >
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            aria-hidden="true"
            class="bpk-icon--rtl-support"
            height="1rem"
            viewBox="0 0 24 24"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
            />
          </svg>
        </span>
         My button
      </div>
    </div>
  </button>
</DocumentFragment>
`;